20151021
=======
Added RELEASE_NOTES in the distribution

20150325
========
-Improved logging

20141125
========
-Added NTLM authentication. 

20140506
========
-Adding basic authentication.
-Adding possibility to connect to the OSata Server through a proxy, this connection allows authentication. 
