@@ -1,5 +1,6 @@
-20151021
+20151022
 =======
+Add timeout to HttpClient in OdataCxfClient
 Added RELEASE_NOTES in the distribution
 
 20150325
